@@ -1,9 +1,14 @@
+2002-06-06  Mike Kestner <mkestner@speakeasy.net>
+
+	* glib/Timeout.cs : new Timeout class with Add() and 
+	  TimeoutHandler delegate.
+
 2002-06-05  Mike Kestner <mkestner@speakeasy.net>
 
 	* generator/Property.cs : Fix get{} GLib.Value passing.
 	* glib/Object.cs : GetProperty passes the GLib.Value now.
 	* glib/Value.cs : Add a ctor to create Values for props.
-	* glue/value.cs : add gtksharp_value_create_from_property.
+	* glue/value.c : add gtksharp_value_create_from_property.
 
 2002-05-29  Mike Kestner <mkestner@speakeasy.net>
 
